java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testMakeClassAbstract3-hints.pass
Make class MakeClassAbstract3 abstract
